# TrussC

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  HOW_TO_BUILD.md  LICENSE.md  README.md  ROADMAP.md  linux-tasklist.md
addons/tcxBox2d/: CMakeLists.txt
addons/tcxBox2d/example-basic/src/: tcApp.cpp
addons/tcxBox2d/example-collision/: .gitignore
addons/tcxBox2d/example-node/: addons.make
addons/tcxBox2d/example-node/src/: tcApp.cpp
addons/tcxBox2d/examples/box2dNodeExample/src/: tcApp.cpp
addons/tcxBox2d/src/: tcxBox2d.h  tcxBox2dBody.h  tcxBox2dCircle.cpp  tcxBox2dCircle.h  tcxBox2dPolygon.cpp  tcxBox2dPolygon.h  tcxBox2dRect.cpp  tcxBox2dRect.h  tcxBox2dWorld.cpp  tcxBox2dWorld.h
addons/tcxHap/: CMakeLists.txt
addons/tcxHap/example-hap/: addons.make
addons/tcxHap/example-hap/src/: tcApp.cpp
addons/tcxHap/src/: tcxHapBcdec.cpp  tcxHapPlayer.h
addons/tcxHap/src/shaders/: ycocg.glsl  ycocg.glsl.h
addons/tcxOsc/: CMakeLists.txt
addons/tcxOsc/example-osc-event/: addons.make
addons/tcxOsc/example-osc-event/src/: tcApp.cpp  tcApp.h
addons/tcxOsc/example-osc-polling/src/: tcApp.cpp  tcApp.h
addons/tcxOsc/example-osc/src/: main.cpp  tcApp.h
addons/tcxOsc/examples/oscExample/: CMakeLists.txt
addons/tcxOsc/examples/oscExample/src/: tcApp.cpp  tcApp.h
addons/tcxOsc/include/tcxOsc/: tcxOsc.h  tcxOscBundle.h  tcxOscMessage.h  tcxOscReceiver.h  tcxOscSender.h
addons/tcxOsc/src/: tcxOsc.h  tcxOscBundle.cpp  tcxOscBundle.h  tcxOscMessage.cpp  tcxOscMessage.h  tcxOscReceiver.h  tcxOscSender.h
addons/tcxTcv/: CMakeLists.txt  README.md  ROADMAP.md
addons/tcxTcv/TrussC_Video_Codec_Encoder/: addons.make
addons/tcxTcv/TrussC_Video_Codec_Encoder/src/: EncodingSession.cpp  EncodingSession.h  tcApp.cpp  tcApp.h
addons/tcxTcv/example-tcvEncoder/src/: EncodingSession.cpp  EncodingSession.h  tcApp.cpp  tcApp.h
addons/tcxTcv/example-tcvPlayer/src/: tcApp.cpp
addons/tcxTcv/src/: tcTcvEncoder.h  tcTcvPlayer.h
addons/tcxTcv/src/impl/: bcdec_impl.cpp
addons/tcxTls/: .gitignore  CMakeLists.txt
addons/tcxTls/example-tls/: addons.make
addons/tcxTls/example-tls/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxTls/examples/tlsExample/: CMakeLists.txt
addons/tcxTls/src/: tcTlsClient.cpp  tcTlsClient.h
addons/tcxWebSocket/: CMakeLists.txt
addons/tcxWebSocket/example-webSocket/: CMakeLists.txt  addons.make
addons/tcxWebSocket/example-webSocket/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxWebSocket/src/: tcWebSocketClient.h
cmake/: use_addon.cmake
docs/: ADDONS.md  AI_AUTOMATION.md  (+14 more)
examples/graphics/strokeMeshExample/: CMakeLists.txt
examples/graphics/strokeMeshExample/src/: main.cpp  tcApp.cpp  tcApp.h
examples/input_output/dragDropExample/: CMakeLists.txt
examples/input_output/dragDropExample/src/: tcApp.cpp  tcApp.h
examples/input_output/screenshotExample/: CMakeLists.txt
examples/input_output/screenshotExample/src/: main.cpp  tcApp.cpp  tcApp.h
examples/templates/emptyExample/: CMakeLists.txt  CMakePresets.json
examples/templates/emptyExample/src/: main.cpp  tcApp.cpp  tcApp.h
examples/threads/threadExample/: .gitignore  CMakeLists.txt
examples/threads/threadExample/src/: main.cpp  tcApp.cpp  tcApp.h  threadedObject.h
modules/tcSound/: CMakeLists.txt
modules/tcSound/include/tc/sound/: tcSound.h
modules/tcSound/src/: tcMicInput_impl.cpp  tcSound_impl.cpp
tools/projectGenerator/: CMakeLists.txt
tools/projectGenerator/icns/: projectGenerator_icon.icns
tools/projectGenerator/src/: main.cpp  tcApp.cpp  tcApp.h
trussc/: CMakeLists.txt
trussc/addons/tcxTls/examples/tlsExample/: CMakeLists.txt
trussc/addons/tcxTls/include/: tcTlsClient.h
trussc/cmake/: trussc_app.cmake  use_addon.cmake
trussc/include/: TrussC.h  tcBaseApp.h  tcBitmapFont.h  tcColor.h  tcMath.h  tcNode.h  tcPlatform.h
trussc/include/impl/: pugixml_impl.cpp  stb_impl.cpp
trussc/include/sokol/: sokol_app.h
trussc/include/tc/3d/: tc3DGraphics.h  tcEasyCam.h  tcLight.h  tcLightingState.h  tcMaterial.h  tcPrimitives.h
trussc/include/tc/animation/: tcEasing.h  tcTween.h
trussc/include/tc/app/: tcGlobal.cpp  tcHeadlessApp.h  tcHeadlessState.h
trussc/include/tc/comm/: tcSerial.h
trussc/include/tc/debug/: tcDebugSound.h
trussc/include/tc/events/: tcCoreEvents.h  tcEvent.h  tcEventArgs.h  tcEventListener.h
trussc/include/tc/gl/: tcFbo.h  tcHasTexture.h  tcShader.h  tcTexture.h
trussc/include/tc/gpu/: tcFbo.h  tcLut.h  tcShader.h  tcTexture.h
trussc/include/tc/gpu/shaders/: lut.glsl.h
trussc/include/tc/graphics/: tcFont.h  tcImage.h  tcMesh.h  tcPixels.cpp  tcPixels.h  tcPolyline.h  tcRenderContext.h  tcShape.h  tcStrokeMesh.h  tcVertexWriter.h
trussc/include/tc/gui/: tcImGui.h
trussc/include/tc/math/: tcFFT.h  tcNoise.h  tcRay.h
trussc/include/tc/network/: tcTcpClient.cpp  tcTcpClient.h  tcTcpServer.cpp  tcTcpServer.h  tcUdpSocket.cpp  tcUdpSocket.h
trussc/include/tc/sound/: tcAudio_impl.cpp  tcChipSound.h  tcSound.h  tcSound_impl.cpp
trussc/include/tc/types/: tcDirection.h  tcLayoutMod.h  tcMod.h  tcRectNode.h  tcRectangle.h  tcScrollBar.h  tcScrollContainer.h
trussc/include/tc/utils/: tcConsole.h  tcDebugInput.h  tcFile.h  tcFileDialog.h  tcJson.h  tcLog.h  tcMCP.h  tcStandardTools.h  tcThread.h  tcThreadChannel.h  tcTime.h  tcUtils.h  tcXml.h
trussc/include/tc/video/: tcVideoGrabber.h  tcVideoPlayer.h  tcVideoPlayerBase.h
trussc/platform/linux/: imgui_impl.cpp  sokol_impl.cpp  tcFbo_linux.cpp  tcFileDialog_linux.cpp  tcPlatform_linux.cpp  tcSound_linux.cpp  tcVideoGrabber_linux.cpp  tcVideoPlayer_linux.cpp
trussc/platform/mac/: sokol_impl.mm  tcFbo_mac.mm  tcFileDialog_mac.mm  tcPlatform_mac.mm  tcVideoGrabber_mac.mm  tcVideoPlayer_mac.mm
trussc/platform/web/: imgui_impl.cpp  shell.html  sokol_impl.cpp  tcFileDialog_web.cpp  tcMicInput_web.cpp  tcPlatform_web.cpp  tcSound_web.cpp  tcVideoPlayer_web.cpp
trussc/platform/win/: tcFbo_win.cpp  tcFileDialog_win.cpp  tcPlatform_win.cpp  tcSound_win.cpp  tcVideoGrabber_win.cpp  tcVideoPlayer_win.cpp
trussc/resources/default.icon/: icon.json
(+308 files in other folders)
